fix style to avoid large layout shifts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ img {
 .actions {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 /* Buttons class */
